--- a/HeroesOfPymoli/HeroesOfPymoli_HW.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_HW.ipynb
@@ -36,14 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -84,11 +77,28 @@
        "0            576"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# Count total number of players\n",
+    "\n",
+    "purchase_data[\"SN\"].nunique()\n",
+    "\n",
+    "TotalPlayers = purchase_data[\"SN\"].nunique()\n",
+    "\n",
+    "TotalPlayers_df = pd.DataFrame({\"Total Players\": [TotalPlayers]})\n",
+    "\n",
+    "TotalPlayers_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
