--- a/HeroesOfPymoli/HeroesOfPymoli_HW.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_HW.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "0            576"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,47 +89,23 @@
     "\n",
     "TotalPlayers = purchase_data[\"SN\"].nunique()\n",
     "\n",
-    "TotalPlayers_df = pd.DataFrame({\"Total Players\": [TotalPlayers]})\n",
+    "# Create data frame for total number of players\n",
     "\n",
+    "TotalPlayers_df = pd.DataFrame({\"Total Players\": [TotalPlayers]})\n",
     "TotalPlayers_df"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Purchasing Analysis (Total)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Run basic calculations to obtain number of unique items, average price, etc.\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame\n"
+    "## Purchasing Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -162,25 +138,57 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>179</td>\n",
-       "      <td>$3.05</td>\n",
+       "      <td>3.050987</td>\n",
        "      <td>780</td>\n",
-       "      <td>$2,379.77</td>\n",
+       "      <td>2379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Number of Unique Items Average Price Number of Purchases Total Revenue\n",
-       "0                     179         $3.05                 780     $2,379.77"
+       "   Number of Unique Items  Average Price  Number of Purchases  Total Revenue\n",
+       "0                     179       3.050987                  780        2379.77"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Calculate number of unique items\n",
+    "\n",
+    "UniqueItems = purchase_data[\"Item ID\"].unique()\n",
+    "CountOfUniqueItems = pd.DataFrame(UniqueItems).count()\n",
+    "CountOfUniqueItems\n",
+    "\n",
+    "# Calculate the average price\n",
+    "\n",
+    "AveragePrice = purchase_data[\"Price\"].mean()\n",
+    "AveragePrice\n",
+    "\n",
+    "# Calculate the number of number of purchases\n",
+    "\n",
+    "NumberOfPurchases = purchase_data[\"Purchase ID\"].value_counts()\n",
+    "SumNumberOfPurchases = NumberOfPurchases.sum()\n",
+    "SumNumberOfPurchases\n",
+    "\n",
+    "# Calculate the total revenue\n",
+    "\n",
+    "TotalRevenue = purchase_data[\"Price\"].sum()\n",
+    "TotalRevenue\n",
+    "\n",
+    "# Create data frame\n",
+    "\n",
+    "purchase_analysis = {'Number of Unique Items': CountOfUniqueItems,\n",
+    "                  'Average Price': AveragePrice,\n",
+    "                  'Number of Purchases': SumNumberOfPurchases,\n",
+    "                  'Total Revenue': TotalRevenue}\n",
+    "\n",
+    "purchase_analysis_df = pd.DataFrame(purchase_analysis)\n",
+    "purchase_analysis_df\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,23 +198,168 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "780"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "* Percentage and Count of Male Players\n",
-    "\n",
-    "\n",
-    "* Percentage and Count of Female Players\n",
-    "\n",
-    "\n",
-    "* Percentage and Count of Other / Non-Disclosed\n",
-    "\n",
-    "\n"
+    "# Count total number of players\n",
+    "TotalPlayers = purchase_data[\"Gender\"].count()\n",
+    "TotalPlayers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "652"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count  number of male players\n",
+    "\n",
+    "MalePlayers = (purchase_data[\"Gender\"] == \"Male\").sum()\n",
+    "MalePlayers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "113"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count number of female players\n",
+    "\n",
+    "FemalePlayers = (purchase_data[\"Gender\"] == \"Female\").sum()\n",
+    "FemalePlayers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count number of other players\n",
+    "\n",
+    "OtherPlayers = (purchase_data[\"Gender\"] == \"Other / Non-Disclosed\").sum()\n",
+    "OtherPlayers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate percentage of male players\n",
+    "\n",
+    "MalePlayersPercent = round((MalePlayers)/(TotalPlayers)*100)\n",
+    "MalePlayersPercent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate percentage of female players\n",
+    "\n",
+    "FemalePlayersPercent = round((FemalePlayers)/(TotalPlayers)*100)\n",
+    "FemalePlayersPercent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate percentage of other players\n",
+    "\n",
+    "OtherPlayersPercent = round((OtherPlayers)/(TotalPlayers)*100)\n",
+    "OtherPlayersPercent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -230,43 +383,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>Total Count</th>\n",
        "      <th>Percentage of Players</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>484</td>\n",
-       "      <td>84.03%</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>652</td>\n",
+       "      <td>84.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>81</td>\n",
-       "      <td>14.06%</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>113</td>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1.91%</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Total Count Percentage of Players\n",
-       "Male                           484                84.03%\n",
-       "Female                          81                14.06%\n",
-       "Other / Non-Disclosed           11                 1.91%"
+       "           Total Count  Percentage of Players\n",
+       "0    Male          652                   84.0\n",
+       "1  Female          113                   14.0\n",
+       "2   Other           15                    2.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Create data frame for gender demographics\n",
+    "\n",
+    "gender_demographics = pd.DataFrame({\" \":[\"Male\", \"Female\",\"Other\"], \"Total Count\":[MalePlayers, FemalePlayers, OtherPlayers], \"Percentage of Players\": [MalePlayersPercent, FemalePlayersPercent, OtherPlayersPercent]})\n",
+    "\n",
+    "gender_demographics"
+   ]
   },
   {
    "cell_type": "markdown",
